[gd_scene load_steps=10 format=3 uid="uid://bqdirqkno2n36"]

[ext_resource type="Script" path="res://mainGame.gd" id="1_s4bva"]
[ext_resource type="Texture2D" uid="uid://d03nqk75nmnqr" path="res://suspect_panel.png" id="2_f25cg"]
[ext_resource type="Texture2D" uid="uid://dbqgk3yg6yeyj" path="res://rules_panel.png" id="3_3ctpg"]
[ext_resource type="Texture2D" uid="uid://dnb4bt3sqi8uy" path="res://InterfaceOutline.png" id="3_vixev"]
[ext_resource type="Texture2D" uid="uid://40m827pn4r7y" path="res://evidence_panel.png" id="4_juy1b"]
[ext_resource type="Texture2D" uid="uid://blc1si6nool21" path="res://world_panel.png" id="5_h10h2"]
[ext_resource type="Texture2D" uid="uid://bca3wt2f8plkr" path="res://potatoes/heads/purple_majesty_head.png" id="7_0jh12"]
[ext_resource type="Texture2D" uid="uid://kjlwp8d6npbd" path="res://Potato_line.png" id="8_s0lh3"]
[ext_resource type="PackedScene" path="res://PotatoPerson.tscn" id="9_bxbx1"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_s4bva")

[node name="Panel" type="Panel" parent="."]
offset_right = 1280.0
offset_bottom = 720.0

[node name="Sprite2D (UI Wireframe)" type="Sprite2D" parent="."]
visible = false
position = Vector2(642, 360)
texture = ExtResource("3_vixev")

[node name="Sprite2D (Rules Panel)" type="Sprite2D" parent="."]
position = Vector2(196.014, 450.653)
scale = Vector2(0.991713, 0.966143)
texture = ExtResource("3_3ctpg")

[node name="Sprite2D (Evidence Panel)" type="Sprite2D" parent="."]
position = Vector2(583.528, 454.051)
scale = Vector2(0.994467, 0.977299)
texture = ExtResource("4_juy1b")

[node name="Sprite2D (World Panel)" type="Sprite2D" parent="."]
position = Vector2(645, 135)
scale = Vector2(0.994467, 0.977299)
texture = ExtResource("5_h10h2")

[node name="Sprite2D (Suspect Panel)" type="Sprite2D" parent="."]
position = Vector2(1032.5, 457.5)
scale = Vector2(0.99723, 0.988584)
texture = ExtResource("2_f25cg")

[node name="Timer" type="Timer" parent="."]

[node name="Label (PotatoInfo)" type="Label" parent="."]
offset_left = 888.0
offset_top = 535.0
offset_right = 1188.0
offset_bottom = 655.0

[node name="Label (JudgementInfo)" type="Label" parent="."]
offset_left = 534.0
offset_top = 478.0
offset_right = 884.0
offset_bottom = 528.0
autowrap_mode = 3

[node name="Label (ScoreLabel)" type="Label" parent="."]
offset_left = 458.0
offset_top = 261.0
offset_right = 658.0
offset_bottom = 311.0

[node name="Label (RulesLabel)" type="Label" parent="."]
offset_left = 96.0139
offset_top = 254.653
offset_right = 296.014
offset_bottom = 634.653
autowrap_mode = 3

[node name="Label (TimeLabel)" type="Label" parent="."]
offset_left = 459.0
offset_top = 294.0
offset_right = 659.0
offset_bottom = 344.0

[node name="Button (WelcomeButton)" type="Button" parent="."]
offset_left = 376.528
offset_top = 536.051
offset_right = 576.528
offset_bottom = 636.051
text = "Welcome to Taterland!"

[node name="Button (NoEntryButton)" type="Button" parent="."]
offset_left = 609.528
offset_top = 536.051
offset_right = 809.528
offset_bottom = 636.051
text = "NO ENTRY!"

[node name="RussetBurbankPotato(2)" type="Sprite2D" parent="."]
position = Vector2(1031.5, 415)
scale = Vector2(1.64844, 1.64844)
texture = ExtResource("7_0jh12")

[node name="PotatoLine" type="Sprite2D" parent="."]
position = Vector2(648, 134)
texture = ExtResource("8_s0lh3")

[node name="Node2D (PotatoPerson)4" parent="." instance=ExtResource("9_bxbx1")]
position = Vector2(288, 192)

[node name="Node2D (PotatoPerson)2" parent="." instance=ExtResource("9_bxbx1")]
position = Vector2(241, 84)

[node name="Node2D (PotatoPerson)3" parent="." instance=ExtResource("9_bxbx1")]
position = Vector2(189, 154)

[node name="Node2D (PotatoPerson)" parent="." instance=ExtResource("9_bxbx1")]
position = Vector2(110, 82)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Button (WelcomeButton)" to="." method="_on_button_welcome_button_pressed"]
[connection signal="pressed" from="Button (NoEntryButton)" to="." method="_on_button_no_entry_button_pressed"]
